--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -1,86 +1,122 @@
-﻿<UserControl x:Class="VisibleConfusion.MVVM.View.PictureView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
-             xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             mc:Ignorable="d"
-             d:DesignWidth="310"
-             Height="444">
-    <UserControl.DataContext>
-        <viewModel:PictureViewModel />
-    </UserControl.DataContext>
-    <DockPanel>
+﻿<UserControl
+	x:Class="VisibleConfusion.MVVM.View.PictureView"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:VisibleConfusion.MVVM.View"
+	xmlns:viewModel="clr-namespace:VisibleConfusion.MVVM.ViewModel"
+	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+	xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
+	mc:Ignorable="d"
+	d:DesignWidth="310"
+	Height="444">
+	<UserControl.DataContext>
+		<viewModel:PictureViewModel />
+	</UserControl.DataContext>
+	<DockPanel>
 
-        <WrapPanel DockPanel.Dock="Top"
-                   Margin="1"
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center">
-            <Button Command="{Binding DrawByHandCommand}">
-                Grafika
-            </Button>
+		<WrapPanel
+			DockPanel.Dock="Top"
+			Margin="1"
+			VerticalAlignment="Center"
+			HorizontalAlignment="Center">
+			<Button
+				Command="{Binding DrawByHandCommand}">
+				Grafika
+			</Button>
 
-            <Button Command="{Binding FromFileCommand}">
-                Z pliku
-            </Button>
+			<Button
+				Command="{Binding FromFileCommand}">
+				Z pliku
+			</Button>
 
-            <Button Command="{Binding FromCameraCommand}">
-                Kamera
-            </Button>
-        </WrapPanel>
+			<Button
+				Command="{Binding FromCameraCommand}">
+				Kamera
+			</Button>
+		</WrapPanel>
 
-        <Grid DockPanel.Dock="Bottom"
-              HorizontalAlignment="Center">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
+		<Grid
+			DockPanel.Dock="Bottom"
+			HorizontalAlignment="Center">
+			<Grid.RowDefinitions>
+				<RowDefinition
+					Height="auto" />
+				<RowDefinition
+					Height="auto" />
+				<RowDefinition
+					Height="auto" />
+				<RowDefinition
+					Height="auto" />
+			</Grid.RowDefinitions>
+			<Grid
+				Grid.Row="0">
+				<Grid.RowDefinitions>
+					<RowDefinition
+						Height="Auto" />
+					<RowDefinition
+						Height="Auto" />
+				</Grid.RowDefinitions>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition />
+					<ColumnDefinition />
+					<ColumnDefinition />
+					<ColumnDefinition />
+					<ColumnDefinition />
+				</Grid.ColumnDefinitions>
 
-	            <xctk:IntegerUpDown
-		            ParsingNumberStyle="HexNumber"
-		            FormatString="X"
-		            VerticalAlignment="Center"
+				<!--dox: https://github.com/xceedsoftware/wpftoolkit/wiki/IntegerUpDown-->
+				<xctk:IntegerUpDown
+					Value="{Binding SelectedPixelPos.X, Mode=TwoWay}"
+					VerticalAlignment="Center"
 					HorizontalAlignment="Center"
 					Grid.Row="0"
-		            Grid.Column="1" 
-		            Minimum="0"
-		            DefaultValue="0"
-		            ClipValueToMinMax="True"
-		            AllowSpin="True"/>
+					Grid.Column="1"
+					Minimum="0"
+					DefaultValue="0"
+					Maximum="{Binding MaxPixelPos.X}"
+					ClipValueToMinMax="True"
+					AllowSpin="True">
+					<behaviors:Interaction.Triggers>
+						<behaviors:EventTrigger
+							EventName="ValueChanged">
+							<behaviors:InvokeCommandAction
+								Command="{Binding OnNumericUpDownPixelPosChangedCommand}"
+								PassEventArgsToCommand="True" />
+						</behaviors:EventTrigger>
+					</behaviors:Interaction.Triggers>
+				</xctk:IntegerUpDown>
 
-                <TextBlock Grid.Column="0"
-                           Foreground="White">X:</TextBlock>
+				<TextBlock
+					Grid.Column="0"
+					Foreground="White">X:</TextBlock>
 				<xctk:IntegerUpDown
-					ParsingNumberStyle="HexNumber"
-					FormatString="X"
+					Value="{Binding SelectedPixelPos.Y}"
 					VerticalAlignment="Center"
 					HorizontalAlignment="Center"
 					Grid.Row="1"
 					Grid.Column="1"
 					Minimum="0"
 					DefaultValue="0"
+					Maximum="{Binding MaxPixelPos.Y}"
 					ClipValueToMinMax="True"
-					AllowSpin="True" />
-				<TextBlock Grid.Column="0"
-                           Grid.Row="1"
-                           Foreground="White">Y:</TextBlock>
+					AllowSpin="True">
+					<behaviors:Interaction.Triggers>
+						<behaviors:EventTrigger
+							EventName="ValueChanged">
+							<behaviors:InvokeCommandAction
+								Command="{Binding OnNumericUpDownPixelPosChangedCommand}"
+								PassEventArgsToCommand="True" />
+						</behaviors:EventTrigger>
+					</behaviors:Interaction.Triggers>
+				</xctk:IntegerUpDown>
+				<TextBlock
+					Grid.Column="0"
+					Grid.Row="1"
+					Foreground="White">Y:</TextBlock>
 				<xctk:IntegerUpDown
+					Value="{Binding SelectedColor.R}"
 					ParsingNumberStyle="HexNumber"
 					FormatString="X"
 					VerticalAlignment="Center"
@@ -92,9 +128,11 @@
 					ClipValueToMinMax="True"
 					AllowSpin="True"
 					Maximum="255" />
-				<TextBlock Grid.Column="2"
-                           Foreground="White">R</TextBlock>
+				<TextBlock
+					Grid.Column="2"
+					Foreground="White">R</TextBlock>
 				<xctk:IntegerUpDown
+					Value="{Binding SelectedColor.G}"
 					ParsingNumberStyle="HexNumber"
 					FormatString="X"
 					VerticalAlignment="Center"
@@ -106,9 +144,11 @@
 					ClipValueToMinMax="True"
 					AllowSpin="True"
 					Maximum="255" />
-				<TextBlock Grid.Column="3"
-                           Foreground="White">G</TextBlock>
+				<TextBlock
+					Grid.Column="3"
+					Foreground="White">G</TextBlock>
 				<xctk:IntegerUpDown
+					Value="{Binding SelectedColor.B}"
 					ParsingNumberStyle="HexNumber"
 					FormatString="X"
 					VerticalAlignment="Center"
@@ -119,79 +159,102 @@
 					DefaultValue="0"
 					ClipValueToMinMax="True"
 					AllowSpin="True"
-					Maximum="255"/>
-				<TextBlock Grid.Column="4"
-                           Foreground="White">B</TextBlock>
-            </Grid>
-            <Border Grid.Row="1"
-                    BorderThickness="2"
-                    Width="Auto"
-                    Height="Auto"
-                    BorderBrush="{StaticResource ForegroundColor}"
-                    CornerRadius="2"
-                    Margin="4"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Effect="{StaticResource dropShadow}">
-                <Grid>
-                    <Border Name="mask"
-                            Background="{StaticResource ForegroundColor}"
-                            CornerRadius="1" />
-                    <StackPanel>
-                        <StackPanel.OpacityMask>
-                            <VisualBrush Visual="{Binding ElementName=mask}" />
-                        </StackPanel.OpacityMask>
-                        <Image Source="{Binding PictureBitmapSource}"
-                               Stretch="Fill"
-                               Width="300"
-                               Height="200" />
-                    </StackPanel>
-                </Grid>
-            </Border>
-            <Grid Grid.Row="2"
-                  HorizontalAlignment="Center">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
+					Maximum="255" />
+				<TextBlock
+					Grid.Column="4"
+					Foreground="White">B</TextBlock>
+			</Grid>
+			<Border
+				Grid.Row="1"
+				BorderThickness="2"
+				Width="Auto"
+				Height="Auto"
+				BorderBrush="{StaticResource ForegroundColor}"
+				CornerRadius="2"
+				Margin="4"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Effect="{StaticResource dropShadow}">
+				<Grid>
+					<Border
+						Name="mask"
+						Background="{StaticResource ForegroundColor}"
+						CornerRadius="1" />
+					<StackPanel>
+						<StackPanel.OpacityMask>
+							<VisualBrush
+								Visual="{Binding ElementName=mask}" />
+						</StackPanel.OpacityMask>
+						<Image
+							Source="{Binding PictureBitmapSource}"
+							Stretch="Fill"
+							Width="300"
+							Height="200">
+							<behaviors:Interaction.Triggers>
+								<behaviors:EventTrigger
+									EventName="MouseLeftButtonDown">
+									<behaviors:InvokeCommandAction
+										Command="{Binding OnMouseLeftButtonDownOnPictureCommand}"
+										PassEventArgsToCommand="True" />
+								</behaviors:EventTrigger>
+							</behaviors:Interaction.Triggers>
+						</Image>
+					</StackPanel>
+				</Grid>
+			</Border>
+			<Grid
+				Grid.Row="2"
+				HorizontalAlignment="Center">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition
+						Width="Auto" />
+					<ColumnDefinition
+						Width="Auto" />
+				</Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0"
-                        Command="{Binding CleanCommand}">
-                    Czyść
-                </Button>
+				<Button
+					Grid.Column="0"
+					Command="{Binding CleanCommand}">
+					Czyść
+				</Button>
 
-                <Button Grid.Column="1"
-                        Command="{Binding DoGraphCommand}">
-                    Wykres
-                </Button>
-            </Grid>
+				<Button
+					Grid.Column="1"
+					Command="{Binding DoGraphCommand}">
+					Wykres
+				</Button>
+			</Grid>
 
-            <Border Grid.Row="3"
-                    BorderThickness="2"
-                    Width="Auto"
-                    Height="Auto"
-                    BorderBrush="{StaticResource ForegroundColor}"
-                    CornerRadius="2"
-                    Margin="4"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Effect="{StaticResource dropShadow}">
-                <Grid>
-                    <Border Name="mask2"
-                            Background="{StaticResource ForegroundColor}"
-                            CornerRadius="1" />
-                    <StackPanel>
-                        <StackPanel.OpacityMask>
-                            <VisualBrush Visual="{Binding ElementName=mask2}" />
-                        </StackPanel.OpacityMask>
-                        <Image Source="{Binding GraphBitmapSource}"
-                               Stretch="Fill"
-                               Width="300"
-                               Height="100" />
-                    </StackPanel>
-                </Grid>
-            </Border>
-        </Grid>
+			<Border
+				Grid.Row="3"
+				BorderThickness="2"
+				Width="Auto"
+				Height="Auto"
+				BorderBrush="{StaticResource ForegroundColor}"
+				CornerRadius="2"
+				Margin="4"
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Effect="{StaticResource dropShadow}">
+				<Grid>
+					<Border
+						Name="mask2"
+						Background="{StaticResource ForegroundColor}"
+						CornerRadius="1" />
+					<StackPanel>
+						<StackPanel.OpacityMask>
+							<VisualBrush
+								Visual="{Binding ElementName=mask2}" />
+						</StackPanel.OpacityMask>
+						<Image
+							Source="{Binding GraphBitmapSource}"
+							Stretch="Fill"
+							Width="300"
+							Height="100" />
+					</StackPanel>
+				</Grid>
+			</Border>
+		</Grid>
 
-    </DockPanel>
+	</DockPanel>
 </UserControl>
