--- a/VisibleConfusion/theme/IntegerUpDown.xaml
+++ b/VisibleConfusion/theme/IntegerUpDown.xaml
@@ -1,53 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit.NET5">
-
-    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-
-    <Geometry x:Key="UpArrowGeometry">M 0,3 C0,3 0,4 0,4 0,4 3,4 3,4 3,4 3,3 3,3 3,3 4,3 4,3 4,3 4,4 4,4 4,4 7,4 7,4 7,4 7,3 7,3 7,3 6,3 6,3 6,3 6,2 6,2 6,2 5,2 5,2 5,2 5,1 5,1 5,1 4,1 4,1 4,1 4,0 4,0 4,0 3,0 3,0 3,0 3,1 3,1 3,1 2,1 2,1 2,1 2,2 2,2 2,2 1,2 1,2 1,2 1,3 1,3 1,3 0,3 0,3 z</Geometry>
-    <Geometry x:Key="DownArrowGeometry">M 0,1 C0,1 0,0 0,0 0,0 3,0 3,0 3,0 3,1 3,1 3,1 4,1 4,1 4,1 4,0 4,0 4,0 7,0 7,0 7,0 7,1 7,1 7,1 6,1 6,1 6,1 6,2 6,2 6,2 5,2 5,2 5,2 5,3 5,3 5,3 4,3 4,3 4,3 4,4 4,4 4,4 3,4 3,4 3,4 3,3 3,3 3,3 2,3 2,3 2,3 2,2 2,2 2,2 1,2 1,2 1,2 1,1 1,1 1,1 0,1 0,1 z</Geometry>
-
-    <DataTemplate x:Key="IncreaseGlyphNormalKey">
-        <Path Width="7"
-              Height="4"
-              Data="{StaticResource UpArrowGeometry}"
-              SnapsToDevicePixels="True"
-              HorizontalAlignment="Center"
-              VerticalAlignment="Center"
-              Focusable="False" />
-    </DataTemplate>
-    <DataTemplate x:Key="IncreaseGlyphDisabledKey">
-        <Path	Width="7"
-                Height="4"
-                Data="{StaticResource UpArrowGeometry}"
-                SnapsToDevicePixels="True"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Focusable="False" />
-    </DataTemplate>
-    <DataTemplate x:Key="DecreaseGlyphNormalKey">
-        <Path Width="7"
-              Height="4"
-              Data="{StaticResource DownArrowGeometry}"
-              SnapsToDevicePixels="True"
-              HorizontalAlignment="Center"
-              VerticalAlignment="Center"
-              Focusable="False" />
-    </DataTemplate>
-    <DataTemplate x:Key="DecreaseGlyphDisabledKey">
-        <Path	Width="7"
-                Height="4"
-                Data="{StaticResource DownArrowGeometry}"
-                SnapsToDevicePixels="True"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Focusable="False" />
-    </DataTemplate>
+                    xmlns:themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit.NET5"
+                    xmlns:chrome="clr-namespace:Xceed.Wpf.Toolkit.Chromes;assembly=Xceed.Wpf.Toolkit.NET5">
 
     <Style TargetType="{x:Type xctk:ButtonSpinner}">
         <Setter Property="Width"
                 Value="55" />
+        <Setter Property="Height"
+                Value="26" />
         <Setter Property="Focusable"
                 Value="False" />
         <Setter Property="HorizontalContentAlignment"
@@ -62,14 +23,6 @@
                 Value="{StaticResource dropShadow}" />
         <Setter Property="VerticalContentAlignment"
                 Value="Center" />
-        <Setter Property="SpinnerUpContentTemplate"
-                Value="{StaticResource IncreaseGlyphNormalKey}" />
-        <Setter Property="SpinnerDownContentTemplate"
-                Value="{StaticResource DecreaseGlyphNormalKey}" />
-        <Setter Property="SpinnerUpDisabledContentTemplate"
-                Value="{StaticResource IncreaseGlyphDisabledKey}" />
-        <Setter Property="SpinnerDownDisabledContentTemplate"
-                Value="{StaticResource DecreaseGlyphDisabledKey}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type xctk:ButtonSpinner}">
@@ -106,6 +59,7 @@
                                               Style="{DynamicResource {x:Static themes:ResourceKeys.SpinnerButtonStyleKey}}"
                                               IsTabStop="{TemplateBinding IsTabStop}"
                                               ContentTemplate="{TemplateBinding SpinnerUpContentTemplate}">
+
                                 </RepeatButton>
 
                                 <RepeatButton x:Name="PART_DecreaseButton"
@@ -130,21 +84,6 @@
                             <Setter Property="Visibility"
                                     Value="Collapsed"
                                     TargetName="gridContent" />
-                        </Trigger>
-                        <Trigger Property="IsMouseOver"
-                                 Value="True">
-                            <Setter Property="BorderBrush"
-                                    Value="{DynamicResource {x:Static themes:ResourceKeys.ControlMouseOverBorderKey}}" />
-                        </Trigger>
-                        <Trigger Property="IsKeyboardFocusWithin"
-                                 Value="True">
-                            <Setter Property="BorderBrush"
-                                    Value="{DynamicResource {x:Static themes:ResourceKeys.ControlSelectedBorderKey}}" />
-                        </Trigger>
-                        <Trigger Property="IsEnabled"
-                                 Value="False">
-                            <Setter Property="Background"
-                                    Value="Red" />
                         </Trigger>
                         <Trigger SourceName="PART_IncreaseButton"
                                  Property="IsEnabled"
@@ -190,7 +129,15 @@
             <Setter.Value>
                 <ControlTemplate TargetType="RepeatButton">
                     <Grid>
-                        <Button Style="{DynamicResource SpinnerButtons}"/>
+                        <chrome:ButtonChrome x:Name="Chrome"
+                                             BorderThickness="0"
+                                             Background="{StaticResource AccentColor}"
+                                             CornerRadius="0,2,2,0"
+                                             RenderEnabled="{TemplateBinding IsEnabled}"
+                                             RenderMouseOver="{TemplateBinding IsMouseOver}"
+                                             RenderNormal="True"
+                                             RenderPressed="{TemplateBinding IsPressed}"
+                                             SnapsToDevicePixels="true" />
                         <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                           Margin="{TemplateBinding Padding}" />
@@ -207,95 +154,135 @@
         <Setter Property="TextAlignment"
                 Value="Center" />
     </Style>
-    <Style x:Key="FocusVisual">
-        <Setter Property="Control.Template">
-            <Setter.Value>
-                <ControlTemplate>
-                    <Rectangle Margin="2"
-                               StrokeDashArray="1 2"
-                               Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
-                               SnapsToDevicePixels="true"
-                               StrokeThickness="1" />
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    <Style x:Key="SpinnerButtons"
-           TargetType="{x:Type Button}">
+    <SolidColorBrush x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type themes:ResourceKeys}, ResourceId=GlyphNormalForegroundKey}"
+                     Color="Black" />
+    <SolidColorBrush x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type themes:ResourceKeys}, ResourceId=GlyphDisabledForegroundKey}"
+                     Color="WhiteSmoke" />
+    <Style TargetType="{x:Type xctk:ButtonChrome}">
         <Setter Property="FocusVisualStyle"
-                Value="{StaticResource FocusVisual}" />
-        <Setter Property="Background"
-                Value="{StaticResource AccentColor}" />
-        <Setter Property="BorderThickness"
-                Value="0" />
-        <Setter Property="HorizontalContentAlignment"
-                Value="Center" />
-        <Setter Property="VerticalContentAlignment"
-                Value="Center" />
-        <Setter Property="Margin"
-                Value="0" />
-        <Setter Property="Padding"
-                Value="3" />
+                Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border x:Name="border"
-                            Background="{TemplateBinding Background}"
-                            BorderThickness="0"
-                            CornerRadius="0,2,2,0"
-                            SnapsToDevicePixels="true">
-                        <ContentPresenter x:Name="contentPresenter"
-                                          Focusable="False"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          Margin="{TemplateBinding Padding}"
-                                          RecognizesAccessKey="True"
-                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                    </Border>
+                <ControlTemplate TargetType="{x:Type chrome:ButtonChrome}">
+                    <Grid>
+                        <Border x:Name="OuterBorder"
+                                CornerRadius="{TemplateBinding CornerRadius}"
+                                Background="{TemplateBinding Background}" />
+                        <Border x:Name="MouseOverVisual"
+                                Opacity="0"
+                                Visibility="Collapsed"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{TemplateBinding CornerRadius}" />
+                        <Border x:Name="PressedVisual"
+                                Opacity="0"
+                                Visibility="Collapsed"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{TemplateBinding CornerRadius}" />
+                        <Border x:Name="FocusVisual"
+                                Opacity="0"
+                                Visibility="Collapsed"
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="{TemplateBinding CornerRadius}" />
+
+                        <ContentPresenter Margin="{TemplateBinding Padding}"
+                                          IsEnabled="{TemplateBinding IsEnabled}"
+                                          Content="{TemplateBinding Content}"
+                                          ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                          ContentTemplate="{TemplateBinding ContentTemplate}"
+                                          ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
+
+                    </Grid>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsDefaulted"
-                                 Value="true">
-                            <Setter Property="BorderBrush"
-                                    TargetName="border"
-                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
-                        </Trigger>
-                        <Trigger Property="IsMouseOver"
-                                 Value="true">
-                            <Setter Property="Background"
-                                    TargetName="border"
-                                    Value="{StaticResource HoverColor}" />
-                            <Setter Property="BorderBrush"
-                                    TargetName="border"
-                                    Value="{StaticResource HoverColor}" />
-                        </Trigger>
-                        <Trigger Property="IsPressed"
-                                 Value="true">
-                            <Setter Property="Background"
-                                    TargetName="border"
-                                    Value="{StaticResource HoverColor}" />
-                            <Setter Property="BorderBrush"
-                                    TargetName="border"
-                                    Value="{StaticResource HoverColor}" />
-                        </Trigger>
-                        <Trigger Property="IsEnabled"
-                                 Value="false">
-                            <Setter Property="Background"
-                                    TargetName="border"
+                        <!-- If button is disabled, not checked, and is rendered normal -->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="RenderEnabled"
+                                           Value="False" />
+                                <Condition Property="RenderChecked"
+                                           Value="False" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="OuterBorder"
+                                    Property="Background"
                                     Value="{StaticResource DisabledColor}" />
-                            <Setter Property="BorderBrush"
-                                    TargetName="border"
-                                    Value="{StaticResource DisabledColor}" />
-                            <Setter Property="TextElement.Foreground"
-                                    TargetName="contentPresenter"
-                                    Value="{StaticResource DisabledColor}" />
-                        </Trigger>
+                        </MultiTrigger>
+                        <!-- if button is enabled and pressed -->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="RenderEnabled"
+                                           Value="True" />
+                                <Condition Property="RenderPressed"
+                                           Value="True" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="OuterBorder"
+                                    Property="Background"
+                                    Value="{StaticResource HoverColor}" />
+                        </MultiTrigger>
+                        <!-- if button is enabled, is not checked, the mouse is over, and not pressed -->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="RenderEnabled"
+                                           Value="True" />
+                                <Condition Property="RenderChecked"
+                                           Value="False" />
+                                <Condition Property="RenderMouseOver"
+                                           Value="True" />
+                                <Condition Property="RenderPressed"
+                                           Value="False" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="OuterBorder"
+                                    Property="Background"
+                                    Value="{StaticResource HoverColor}" />
+                        </MultiTrigger>
+                        <!-- if button is enabled, checked, the mouse is not over, and it is not pressed -->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="RenderEnabled"
+                                           Value="True" />
+                                <Condition Property="RenderChecked"
+                                           Value="True" />
+                                <Condition Property="RenderMouseOver"
+                                           Value="False" />
+                                <Condition Property="RenderPressed"
+                                           Value="False" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="OuterBorder"
+                                    Property="BorderBrush"
+                                    Value="Green" />
+                            <Setter TargetName="OuterBorder"
+                                    Property="Background"
+                                    Value="Lime" />
+                        </MultiTrigger>
+                        <!-- if button is focused, is enabled, not pressed, and the mouse is not over -->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="RenderFocused"
+                                           Value="True" />
+                                <Condition Property="RenderEnabled"
+                                           Value="True" />
+                                <Condition Property="RenderPressed"
+                                           Value="False" />
+                                <Condition Property="RenderMouseOver"
+                                           Value="False" />
+                            </MultiTrigger.Conditions>
+                        </MultiTrigger>
+                        <!-- if not rendered normally -->
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="RenderNormal"
+                                           Value="False" />
+                                <Condition Property="RenderChecked"
+                                           Value="False" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="OuterBorder"
+                                    Property="BorderBrush"
+                                    Value="Blue" />
+                            <Setter TargetName="OuterBorder"
+                                    Property="Background"
+                                    Value="Cyan" />
+                        </MultiTrigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    <SolidColorBrush x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type themes:ResourceKeys}, ResourceId=GlyphNormalForegroundKey}"
-                     Color="Black" />
-    <SolidColorBrush x:Key="{ComponentResourceKey TypeInTargetAssembly={x:Type themes:ResourceKeys}, ResourceId=GlyphDisabledForegroundKey}"
-                     Color="Transparent" />
 </ResourceDictionary>
