--- a/VisibleConfusion/MVVM/View/PictureView.xaml
+++ b/VisibleConfusion/MVVM/View/PictureView.xaml
@@ -10,7 +10,7 @@
              xmlns:themes="clr-namespace:Xceed.Wpf.Toolkit.Themes;assembly=Xceed.Wpf.Toolkit.NET5"
              mc:Ignorable="d"
              d:DesignWidth="310"
-             Height="460">
+             d:DesignHeight="460">
     <UserControl.DataContext>
         <viewModel:PictureViewModel />
     </UserControl.DataContext>
@@ -36,10 +36,10 @@
         <Grid DockPanel.Dock="Bottom"
               HorizontalAlignment="Center">
             <Grid.RowDefinitions>
-                <RowDefinition Height="0.55*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="0.6*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="0.4*" />
             </Grid.RowDefinitions>
             <Grid Grid.Row="0">
                 <Grid.RowDefinitions>
@@ -152,14 +152,14 @@
                     <Border Name="mask"
                             Background="{StaticResource ForegroundColor}"
                             CornerRadius="1" />
-                    <StackPanel>
-                        <StackPanel.OpacityMask>
+					<DockPanel>
+						<DockPanel.OpacityMask>
                             <VisualBrush Visual="{Binding ElementName=mask}" />
-                        </StackPanel.OpacityMask>
+                        </DockPanel.OpacityMask>
                         <Image Source="{Binding PictureBitmapSource}"
                                Stretch="Fill"
-                               Width="300"
-                               Height="200">
+                               Width="Auto"
+                               Height="Auto">
                             <behaviors:Interaction.Triggers>
                                 <behaviors:EventTrigger EventName="MouseLeftButtonDown">
                                     <behaviors:InvokeCommandAction Command="{Binding OnMouseLeftButtonDownOnPictureCommand}"
@@ -167,7 +167,7 @@
                                 </behaviors:EventTrigger>
                             </behaviors:Interaction.Triggers>
                         </Image>
-                    </StackPanel>
+                    </DockPanel>
                 </Grid>
             </Border>
             <Grid Grid.Row="2"
@@ -202,15 +202,14 @@
                     <Border Name="mask2"
                             Background="{StaticResource ForegroundColor}"
                             CornerRadius="1" />
-                    <StackPanel>
-                        <StackPanel.OpacityMask>
+                    <DockPanel
+	                    Height="Auto">
+						<DockPanel.OpacityMask>
                             <VisualBrush Visual="{Binding ElementName=mask2}" />
-                        </StackPanel.OpacityMask>
+                        </DockPanel.OpacityMask>
                         <Image Source="{Binding GraphBitmapSource}"
-                               Stretch="Fill"
-                               Width="300"
-                               Height="100" />
-                    </StackPanel>
+                               Stretch="Fill" />
+                    </DockPanel>
                 </Grid>
             </Border>
         </Grid>
